<resources>
    <string name="app_name">Todo</string>
    <string name="todo_text_hint" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_text">e.g., Meet with Manager</string>
    <string name="priority">Priority</string>
    <string name="save">save</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="sample_text">Sample Text</string>
    <string name="delete">delete</string>
    <string name="show_tasks">Show Completed Tasks</string>
    <string name="hide_tasks">Hide Completed Tasks</string>
    <string name="sort">Sort</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="by_date_created">By Date Created</string>

    <!--회원가입-->
    <string name="enter_address">이메일 주소 입력</string>
    <string name="pw_8">비밀번호 (8글자 이상)</string>
    <string name="confirm_pw">비밀번호 확인</string>
    <string name="btn_join">회원가입</string>
    <string name="user_check">사용자 정보 확인</string>
    <string name="code_confirm">확인코드 입력</string>
    <string name="enter">입력</string>

    <!--로그인-->
    <string name="btn_start_fb">페이스북으로 시작</string>
    <string name="btn_start_google">Google로 시작</string>
    <string name="btn_start_user">회원으로 시작</string>
    <string name="login_email">이메일로 로그인</string>
    <string name="forget_pw">비밀번호를 잊으셨나요?</string>
    <string name="signup_email">이메일로 회원가입</string>
    <string name="email_address">이메일 주소 입력</string>

    <!--로그인 및 로그아웃 버튼-->
    <string name="btn_login">로그인</string>
    <string name="btn_logout">로그아웃</string>

    <string name="sample_description">sample_description</string>

    <string name="book_name">book_name</string>
    <string name="book_description">book_description</string>
</resources>