<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dee0e2"
    tools:context=".Login.AuthMainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_Facebook_Login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#02A697"
            android:onClick="openFacebookLogin"
            android:text="@string/btn_start_fb"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_google_Login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#02A697"
            android:text="@string/btn_start_google"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/user_signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/btn_start_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" / " />

            <Button
                android:id="@+id/btn_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:padding="4dp"
                android:text="@string/btn_join" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="345dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-33dp"
        tools:layout_editor_absoluteY="-18dp">

        <Button
            android:id="@+id/em_btn"
            android:layout_width="63dp"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="비상용 버튼"
            tools:layout_editor_absoluteX="329dp"
            tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>